--- a/1.2_structure.Rmd
+++ b/1.2_structure.Rmd
@@ -78,8 +78,8 @@ hchart( region %>%  dplyr::select(REG,LIBGEO,p20,p60,pop) %>%
 leaflet(regwgs) %>%  addProviderTiles(providers$CartoDB.Positron) %>%
   setView(lng = 5.1, lat = 47.27, zoom = 6) %>%
   addPolygons(fillColor = ~pal(ind_jeun), weight = 2,opacity = 0.6,
-              color = "#2F4F4F",fillOpacity = 0.7 ) %>% 
-  addPolygons(data=reg27carto,group  = "BFC",fill = F,color="#9370DB",weight = 5,opacity = 1) %>%
+              color = "#2F4F4F",fillOpacity = 0.7, smoothFactor = 2 ) %>% 
+  addPolygons(data=reg27carto,group  = "BFC",fill = F,color="#9370DB",weight = 5,opacity = 1, smoothFactor = 5) %>%
    addCircles(centroid(regwgs)[,1],centroid(regwgs)[,2],weight=4,
              radius = ~100*p1529^(1/2), color = "#4169E1",
              fillColor = ~pal2(100*p1529/pop), fillOpacity = 0.7,
@@ -155,9 +155,9 @@ hchart( departement %>% filter(DEP %in% depbfc) %>%
 leaflet(depwgs) %>% addProviderTiles(providers$CartoDB.Positron) %>%
   setView(lng = 5.1, lat = 47.27, zoom = 6) %>%
   addPolygons(fillColor = ~pal(ind_jeun), weight = 2,opacity = 0.6,
-              color = "#2F4F4F",fillOpacity = 0.7 ) %>%
-  addPolygons(data=reg27carto,group  = "BFC",fill = F,color="#9370DB",weight = 5,opacity = 1) %>%
-  addPolygons(data=dep27carto,group  = "départements",fill = F,color="#9370DB",weight = 3,opacity = 1) %>%
+              color = "#2F4F4F",fillOpacity = 0.7, smoothFactor = 2 ) %>%
+  addPolygons(data=reg27carto,group  = "BFC",fill = F,color="#9370DB",weight = 5,opacity = 1, smoothFactor = 5) %>%
+  addPolygons(data=dep27carto,group  = "départements",fill = F,color="#9370DB",weight = 3,opacity = 1, smoothFactor = 5) %>%
    addCircles(centroid(depwgs)[,1],centroid(depwgs)[,2],
              radius = ~100*p1529^(1/2), color = "#4169E1",weight=4,
              fillColor = ~pal2(prop1529), fillOpacity = 0.7,
@@ -212,8 +212,8 @@ leaflet(epcicarto) %>% addProviderTiles(providers$CartoDB.Positron) %>%
   
   addPolygons(fillColor = ~pal(ind_jeun), weight = 1,opacity = 0.6,
               color = "#2F4F4F",fillOpacity = 0.7 ) %>%
-  addPolygons(data=reg27carto,group  = "BFC",fill = F,color="#9370DB",weight = 5,opacity = 1) %>%
-  addPolygons(data=dep27carto,group  = "départements",fill = F,color="#9370DB",weight = 3,opacity = 1) %>%
+  addPolygons(data=reg27carto,group  = "BFC",fill = F,color="#9370DB",weight = 5,opacity = 1, smoothFactor = 5) %>%
+  addPolygons(data=dep27carto,group  = "départements",fill = F,color="#9370DB",weight = 3,opacity = 1, smoothFactor = 5) %>%
      addCircles(centroid(epcicarto)[,1],centroid(epcicarto)[,2],
              radius = ~100*p1529^(1/2), color = "#4169E1",weight=4,
              fillColor = ~pal2(prop1529), fillOpacity = 0.7,
@@ -268,8 +268,8 @@ leaflet(bvcarto) %>% addProviderTiles(providers$CartoDB.Positron) %>%
   setView(lng = 5.1, lat = 47.27, zoom = 8) %>%
   addPolygons(fillColor = ~pal(ind_jeun), weight = 1,opacity = 0.6,
               color = "#2F4F4F",fillOpacity = 0.7 ) %>%
-  addPolygons(data=reg27carto,group  = "BFC",fill = F,color="#9370DB",weight = 5,opacity = 1) %>%
-  addPolygons(data=dep27carto,group  = "départements",fill = F,color="#9370DB",weight = 3,opacity = 1) %>%
+  addPolygons(data=reg27carto,group  = "BFC",fill = F,color="#9370DB",weight = 5,opacity = 1, smoothFactor = 5) %>%
+  addPolygons(data=dep27carto,group  = "départements",fill = F,color="#9370DB",weight = 3,opacity = 1, smoothFactor = 5) %>%
   
      addCircles(centroid(bvcarto)[,1],centroid(bvcarto)[,2],
              radius = 100*bvcarto$p1529^(1/2), color = "#4169E1", opacity = 0.8, weight=4,
