--- a/2.1_jeunesse.Rmd
+++ b/2.1_jeunesse.Rmd
@@ -70,8 +70,8 @@ kable("html",
 leaflet(regwgs) %>% addProviderTiles(providers$CartoDB.Positron) %>% 
   setView(lng = 5.1, lat = 47.27, zoom = 6) %>%
   addPolygons(fillColor = ~pal2(prop1529), weight = 2,opacity = 0.6,
-              color = "#2F4F4F",fillOpacity = 0.6 ) %>% 
-  addPolygons(data=reg27carto,group  = "BFC",fill = F,color="#9370DB",weight = 5,opacity = 1) %>%
+              color = "#2F4F4F",fillOpacity = 0.6, smoothFactor = 2 ) %>% 
+  addPolygons(data=reg27carto,group  = "BFC",fill = F,color="#9370DB",weight = 5,opacity = 1, smoothFactor = 5) %>%
   addCircles(centroid(regwgs)[,1],centroid(regwgs)[,2],
              radius = ~50*p1529^(1/2), weight=4,
              color = "#4169E1", opacity = 0.8,
@@ -135,8 +135,9 @@ as.data.frame(dep27_tab) %>%
 leaflet(depwgs) %>% addProviderTiles(providers$CartoDB.Positron) %>% 
   setView(lng = 5.1, lat = 47.27, zoom = 6) %>%
   addPolygons(fillColor = ~pal2(prop1529), weight = 2,opacity = 0.6,
-              color = "#2F4F4F",fillOpacity = 0.6 ) %>%  addPolygons(data=reg27carto,group  = "BFC",fill = F,color="#9370DB",weight = 5,opacity = 1) %>%
-  addPolygons(data=dep27carto,group  = "départements",fill = F,color="#9370DB",weight = 3 ,opacity = 1) %>%
+              color = "#2F4F4F",fillOpacity = 0.6, smoothFactor = 2 ) %>%  
+  addPolygons(data=reg27carto,group  = "BFC",fill = F,color="#9370DB",weight = 5,opacity = 1, smoothFactor = 5) %>%
+  addPolygons(data=dep27carto,group  = "départements",fill = F,color="#9370DB",weight = 3 ,opacity = 1, smoothFactor = 5) %>%
   addCircles(centroid(depwgs)[,1],centroid(depwgs)[,2],
              radius = ~50*p1529^(1/2), weight=4,
              color = "#4169E1", opacity = 0.8,
@@ -198,8 +199,8 @@ leaflet(epcicarto) %>% addProviderTiles(providers$CartoDB.Positron) %>%
   setView(lng = 5.1, lat = 47.27, zoom = 8) %>%
   addPolygons(fillColor = ~pal2(prop1529), weight = 2,opacity = 0.6,
               color = "#2F4F4F",fillOpacity = 0.6 ) %>% 
-  addPolygons(data=reg27carto,group  = "BFC",fill = F,color="#9370DB",weight = 5,opacity = 1) %>%
-  addPolygons(data=dep27carto,group  = "départements",fill = F,color="#9370DB",weight = 3,opacity = 1) %>%
+  addPolygons(data=reg27carto,group  = "BFC",fill = F,color="#9370DB",weight = 5,opacity = 1, smoothFactor = 5) %>%
+  addPolygons(data=dep27carto,group  = "départements",fill = F,color="#9370DB",weight = 3,opacity = 1, smoothFactor = 5) %>%
   addCircles(centroid(epcicarto)[,1],centroid(epcicarto)[,2],
              radius = ~50*p1529^(1/2), weight=4,
              color = "#4169E1", opacity = 0.8,
@@ -257,8 +258,8 @@ leaflet(bvcarto) %>% addProviderTiles(providers$CartoDB.Positron) %>%
   setView(lng = 5.1, lat = 47.27, zoom = 8) %>%
   addPolygons(fillColor = ~pal2(prop1529), weight = 2,opacity = 0.6,
               color = "#2F4F4F",fillOpacity = 0.6 ) %>% 
-  addPolygons(data=reg27carto,group  = "BFC",fill = F,color="#9370DB",weight = 5,opacity = 1) %>%
-  addPolygons(data=dep27carto,group  = "départements",fill = F,color="#9370DB",weight = 3,opacity = 1) %>%
+  addPolygons(data=reg27carto,group  = "BFC",fill = F,color="#9370DB",weight = 5,opacity = 1, smoothFactor = 5) %>%
+  addPolygons(data=dep27carto,group  = "départements",fill = F,color="#9370DB",weight = 3,opacity = 1, smoothFactor = 5) %>%
     addCircles(centroid(bvcarto)[,1],centroid(bvcarto)[,2],
              radius = ~50*p1529^(1/2), weight=4,
              color = "#4169E1", opacity = 0.8,
