--- a/5.3_nature.Rmd
+++ b/5.3_nature.Rmd
@@ -202,8 +202,8 @@ names(nature27.df) %>%
 
 
 l %>%
- addPolygons(data=reg27carto,group  = "BFC",fill = F,color="#9370DB",weight = 5,opacity = 1) %>%
-  addPolygons(data=dep27carto,group  = "départements",fill = F,color="#9370DB",weight = 3,opacity = 1) %>%
+ addPolygons(data=reg27carto,group  = "BFC",fill = F,color="#9370DB",weight = 5,opacity = 1, smoothFactor = 5) %>%
+  addPolygons(data=dep27carto,group  = "départements",fill = F,color="#9370DB",weight = 3,opacity = 1, smoothFactor = 2) %>%
   addLayersControl(
     overlayGroups = names(nature27.df),
     options = layersControlOptions(collapsed = FALSE)
@@ -244,8 +244,8 @@ names(nature27.df) %>%
 
 
 l %>%
- addPolygons(data=reg27carto,group  = "BFC",fill = F,color="#9370DB",weight = 5,opacity = 1) %>%
-  addPolygons(data=dep27carto,group  = "départements",fill = F,color="#9370DB",weight = 3,opacity = 1) %>%
+ addPolygons(data=reg27carto,group  = "BFC",fill = F,color="#9370DB",weight = 5,opacity = 1, smoothFactor = 5) %>%
+  addPolygons(data=dep27carto,group  = "départements",fill = F,color="#9370DB",weight = 3,opacity = 1, smoothFactor = 2) %>%
   addLayersControl(
     overlayGroups = names(nature27.df),
     options = layersControlOptions(collapsed = FALSE)
